--- a/2. Markov Decision Processes and Dynamic Programming/2.2 Introducing Randomness.ipynb
+++ b/2. Markov Decision Processes and Dynamic Programming/2.2 Introducing Randomness.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1100,
+   "execution_count": 1151,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1101,
+   "execution_count": 1152,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        " (3, 5): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 0.0}}"
       ]
      },
-     "execution_count": 1101,
+     "execution_count": 1152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +182,7 @@
     "Where: \n",
     "- $\\mathcal{S}$ is the **state space**.\n",
     "- $\\mathcal{A}$ is the **action space**.\n",
-    "- **$P(s'|s,a)$ is the **transition function** - the probability of reaching state $s'$ by taking action $a$ in state $s$.** \n",
+    "- $P(s'|s,a)$ is the **transition function** - the probability of reaching state $s'$ by taking action $a$ in state $s$. \n",
     "- $R(s,a,s')$ is the reward received immediately after taking action $a$ in state $s$. \n",
     "- $\\gamma$ is a discount factor.\n",
     "\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1102,
+   "execution_count": 1153,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1103,
+   "execution_count": 1154,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1104,
+   "execution_count": 1155,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1105,
+   "execution_count": 1156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
    "metadata": {},
    "source": [
     "We perform our updates as before, using the equation: \n",
-    "$$Q(s,a)=R + \\max_{a'}Q(s',a')$$"
+    "$$Q(s,a)=R + \\gamma \\cdot \\max_{a'}Q(s',a')$$"
    ]
   },
   {
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1106,
+   "execution_count": 1157,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1107,
+   "execution_count": 1158,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,27 @@
     "```\n",
     "Recall how we laid out our state transition probabilities earlier: we said that with probability $0.8$, the action would transition state as intended, but with probability $0.2$, the action would transition state perpendicular to the intended. \n",
     "\n",
-    "This means that during our update, the agent tested action '$\\text{left}$' in state $(2,3)$ and, with a probability of 10%, it moved upwards instead (i.e., ended up in state $(1,3)$). It then used the *value of this state* to update its belief about the value of $Q((2,3), \\text{right})$. "
+    "This means that during our update, the agent tested action '$\\text{left}$' in state $(2,3)$ and, with a probability of 10%, it moved upwards instead (i.e., ended up in state $(1,3)$). It then used the *value of this state* to update its belief about the value of $Q((2,3), \\text{left})$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'up': -5, 'down': -5, 'left': 5.3136, 'right': -5}"
+      ]
+     },
+     "execution_count": 1159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q_values[(2,3)]"
    ]
   },
   {
@@ -385,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1108,
+   "execution_count": 1160,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1109,
+   "execution_count": 1161,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1110,
+   "execution_count": 1162,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +457,7 @@
        "{'up': 7.29, 'down': 7.29, 'left': 7.29, 'right': -5}"
       ]
      },
-     "execution_count": 1110,
+     "execution_count": 1162,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,12 +472,12 @@
    "source": [
     "The Q-values for actions '$\\text{up}$', '$\\text{down}$', and '$\\text{left}$' have been assigned equal value. With each value equal, the agent will simply pick the **first occurrence** of the maximum value, and so it selects action '$\\text{up}$'.\n",
     "\n",
-    "We can also visualise what happens when we update our Q-values a few more times:"
+    "We can also visualise what happens when we update our Q-values a few more times (remember, we want our Q-values to converge so we can't take the first update at face value):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1111,
+   "execution_count": 1163,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +492,7 @@
     }
    ],
    "source": [
-    "for _ in range(10):\n",
+    "for _ in range(50):\n",
     "    update()\n",
     "visualise_path()"
    ]
@@ -481,7 +501,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The agent gets stuck almost immediately."
+    "The agent gets stuck almost immediately as the Q-values converge to their 'true' values. This is the problem with taking a deterministic approach when dealing with probabilistic transitions: the Q-values fail to update in a manner that can be useful to us. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1164,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): {'up': -5, 'down': 3.87, 'left': -5, 'right': -5},\n",
+       " (0, 1): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (0, 2): {'up': -5, 'down': 3.87, 'left': -5, 'right': -5},\n",
+       " (0, 3): {'up': -5, 'down': 6.56, 'left': -5, 'right': 6.56},\n",
+       " (0, 4): {'up': -5, 'down': 7.29, 'left': 7.29, 'right': 7.29},\n",
+       " (0, 5): {'up': -5, 'down': 6.56, 'left': -5, 'right': -5},\n",
+       " (1, 0): {'up': 3.49, 'down': 3.49, 'left': 3.49, 'right': -5},\n",
+       " (1, 1): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (1, 2): {'up': 3.49, 'down': 6.56, 'left': -5, 'right': 6.56},\n",
+       " (1, 3): {'up': 5.9, 'down': 3.87, 'left': 5.9, 'right': 7.29},\n",
+       " (1, 4): {'up': 6.56, 'down': -5, 'left': 6.56, 'right': 6.56},\n",
+       " (1, 5): {'up': 5.9, 'down': 9.0, 'left': 5.9, 'right': 5.9},\n",
+       " (2, 0): {'up': 3.14, 'down': 3.14, 'left': -5, 'right': 3.87},\n",
+       " (2, 1): {'up': -5, 'down': 4.3, 'left': 3.49, 'right': 4.3},\n",
+       " (2, 2): {'up': 5.9, 'down': 3.87, 'left': 3.87, 'right': 3.87},\n",
+       " (2, 3): {'up': 6.56, 'down': -5, 'left': 5.31, 'right': -5},\n",
+       " (2, 4): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (2, 5): {'up': 8.1, 'down': 10.0, 'left': -5, 'right': -5},\n",
+       " (3, 0): {'up': -5, 'down': -5, 'left': -5, 'right': 3.49},\n",
+       " (3, 1): {'up': 3.87, 'down': -5, 'left': 3.14, 'right': 3.87},\n",
+       " (3, 2): {'up': 5.31, 'down': -5, 'left': -5, 'right': -5},\n",
+       " (3, 3): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (3, 4): {'up': -5, 'down': 10.0, 'left': -5, 'right': 10.0},\n",
+       " (3, 5): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 0.0}}"
+      ]
+     },
+     "execution_count": 1164,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q_values = {\n",
+    "    state: {action: round(value, 2) for action, value in actions.items()}\n",
+    "    for state, actions in Q_values.items()\n",
+    "}\n",
+    "Q_values"
    ]
   },
   {
@@ -493,7 +560,7 @@
     "\n",
     "When we update our Q-value using this rule, we assume that the **the action always transitions to the best next state**. This means that the agent is not learning the **true expected value of the next state**. \n",
     "\n",
-    "Consider an action which has a 90% chance of a reward of $10$, but a 10% chance of a penalty of $100$. Can we assign a value of $10$ to the action just because it is the most probable outcome? No - **we must weight all outcomes** by their chances of happening to get an accurate representation of their value: \n",
+    "Consider an action which has a 90% chance of a reward of $10$, but a 10% chance of a penalty of $100$. Can we assign a value of $10$ to the action just because it is the most probable outcome? No - **we must weigh all outcomes by their probability** to get an accurate representation of the expected value: \n",
     "$$(0.9 * 10) + (0.1 * -100) = -1$$\n",
     "\n",
     "This is **exactly** what we need to consider when we're navigating our grid. Each action has a probability of transitioning to three separate states: \n",
@@ -521,12 +588,12 @@
     "We step backwards to find $Q((2,5), \\text{down})$. We know that the immediate reward for taking this action is $10$, but we **must also consider** that when the agent takes this action, there is a 10% probability it will move **left**, into an obstacle, and a 10% probability that it will move **right**, out of bounds. Both of these transitions carry a **$-5$ penalty**, and so they must be factored into the value of this action. \n",
     "\n",
     "So we know: \n",
-    "- There is a **$0.8$ probability of reward $10$** by moving down.\n",
-    "- A **$0.1$ probability of reward $-5$** by moving left.\n",
-    "- A **$0.1$ probability of reward $-5$** by moving right.\n",
+    "- There is a **$0.8$ probability of reward $10$** for moving down.\n",
+    "- A **$0.1$ probability of reward $-5$** for moving left.\n",
+    "- A **$0.1$ probability of reward $-5$** for moving right.\n",
     "\n",
     "We can sum these to find the immediate expected reward: \n",
-    "$$(0.8 \\times 10) + (0.1 \\times -5) + (0.1 \\times -5) = 7$$\n",
+    "$$\\mathbb{E}[R]=(0.8 \\times 10) + (0.1 \\times -5) + (0.1 \\times -5) = 7$$\n",
     "\n",
     "$$Q((2,5), \\text{down}) = 7 + 0.9 \\cdot 0 \\cdot 0 = 7$$"
    ]
@@ -560,7 +627,7 @@
     "Remembering that we need to discount future values using discount factor $\\gamma=0.9$, our expected *value* is: \n",
     "$$(0.8 \\times [0 + (0.9 \\cdot 7)]) + (0.1 \\times (0+ -5)) + (0.1 \\times (0+-5)) = 4.04$$\n",
     "\n",
-    "Each time, we're weighting both the **immediate reward and the value of the next state** by the probability that taking a given action reaches that state, and then summing across all possible states that may result from that action.\n",
+    "Each time, we're weighting both the **immediate reward and the discounted value of the next state** by the probability that taking a given action reaches that state, and then **summing across all possible states that may result from that action**.\n",
     "\n",
     "We represent this process mathematically as follows: \n",
     "$$V(s)=\\sum_{s'}P(s'|s,a)[R(s,a,s')+ \\gamma \\cdot V(s')]$$\n",
@@ -578,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1112,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -591,17 +658,23 @@
     "\n",
     "        for action in actions:\n",
     "            possible_moves = get_possible_moves(state, action)\n",
+    "\n",
+    "            # We initialise the expected value at zero.\n",
     "            expected_value = 0\n",
     "\n",
-    "            # Sum over each possible move\n",
+    "            # We now sum over each possible move\n",
     "            for move, prob in zip(possible_moves, probabilities):\n",
     "                if is_valid(move):\n",
     "                    reward = rewards.get(move, 0)\n",
     "                    next_value = max(Q_values[move].values())\n",
+    "\n",
+    "                # A penalty of 5 and a zero-value for entering invalid states (obstacle/out of bounds)\n",
     "                else: reward = -5; next_value = 0\n",
-    "                # P(s'|s, a) * [R + gamma * max Q(s', a')]\n",
+    "\n",
+    "                # We add P(s'|s, a) * [R + gamma * max Q(s', a')] to our expected value\n",
     "                expected_value += prob * (reward + gamma * next_value)\n",
     "\n",
+    "            # Finally, we define our Q-value as the sum of the expected values of each possible move\n",
     "            Q_values[state][action] = expected_value\n"
    ]
   },
@@ -614,10 +687,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1113,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "np.random.seed(0)\n",
     "for _ in range(100):\n",
     "    update()"
    ]
@@ -631,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1114,
+   "execution_count": 1167,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +737,7 @@
        " (3, 5): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 0.0}}"
       ]
      },
-     "execution_count": 1114,
+     "execution_count": 1167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -677,8 +751,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can now see how our agent navigates our grid. We can see some slipping, but the agent manages to get itself back on the right track."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1115,
+   "execution_count": 1168,
    "metadata": {},
    "outputs": [
     {
@@ -687,13 +768,124 @@
      "text": [
       "S # - - - -\n",
       "↓ # → → → ↓\n",
-      "→ → ↑ ↑ # ↓\n",
-      "- ↑ - # - F\n"
+      "→ → ↑ - # ↓\n",
+      "- - - # - F\n"
      ]
     }
    ],
    "source": [
     "visualise_path()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Stochastic Policies\n",
+    "\n",
+    "Previously, we have seen how the agent navigates the grid using a **deterministic policy** (specifically the optimal policy), where it simply picks the action with the highest Q-value in each state: \n",
+    "$$\\pi^*(a|s)=\\arg \\max_{a}Q(s,a)$$\n",
+    "\n",
+    "We will now consider situations in which the agent will navigate the grid using a **Stochastic Policy**, where the **next action is sampled from a probability distribution across the action space**: \n",
+    "$$\\pi(a|s)=P(a|s)$$\n",
+    "where the policy for taking action $a$ in state $s$ is given by the probability for taking action $a$ in state $s$.\n",
+    "\n",
+    "We briefly saw in the previous notebook how we can convert Q-values into probabilities by using a softmax distribution: \n",
+    "$$P(a)=\\frac{e^{Q(a)}}{\\sum_{a}e^{Q(a)}}$$\n",
+    "\n",
+    "We can also introduce a new temperature parameter, $\\tau$, to this function to control the shape of the distribution:\n",
+    "$$P(a)=\\frac{e^{\\frac{Q(a)}{\\tau}}}{\\sum_{a}e^{\\frac{Q(a)}{\\tau}}}$$\n",
+    "- A high $\\tau$ results in a more uniform probability. \n",
+    "- A low $\\tau$ results in a more determinstic policy, with a preference towards optimal values. \n",
+    "This is useful for controlling **exploration vs. exploitation**. \n",
+    "\n",
+    "Let's see how that works by looking at the Q-values for state $(2,0)$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1191,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'up': -0.84, 'down': -0.38, 'left': -4.05, 'right': 0.58}"
+      ]
+     },
+     "execution_count": 1191,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Q_values[(2,0)]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's map those to probabilities in the range $[0,1]$ using our softmax function, and experiment with different values of our temperature parameter tau, $\\tau$. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tau = 1: {'up': 0.148, 'down': 0.234, 'left': 0.006, 'right': 0.612}\n",
+      "Tau = 10: {'up': 0.255, 'down': 0.267, 'left': 0.185, 'right': 0.294}\n",
+      "Tau = 0.1: {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 1.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "def softmax(q_values, tau=1.0):\n",
+    "    values = np.array(list(q_values.values()))\n",
+    "    exp = np.exp(values/tau)\n",
+    "    probabilities = (exp / np.sum(exp)).tolist()\n",
+    "\n",
+    "    return ({action: round(prob,3) for action, prob in zip(q_values.keys(), probabilities)})\n",
+    "\n",
+    "print(f\"Tau = 1: {softmax(Q_values[(2,0)], 1)}\")\n",
+    "print(f\"Tau = 10: {softmax(Q_values[(2,0)], 10)}\")\n",
+    "print(f\"Tau = 0.1: {softmax(Q_values[(2,0)], 0.1)}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Stochastic Policies and Bellman Equations\n",
+    "We have previously considered only **deterministically selecting the best action** when calculating our state values and action values: \n",
+    "$$V^{\\pi^*}(s)=\\sum_{s'}P(s'|s,a)[R(s,a,s')+ \\gamma \\cdot V^{\\pi^*}(s')]$$\n",
+    "\n",
+    "Equivalently: \n",
+    "$$Q^{\\pi^*}(s,a)=\\sum_{s'}P(s'|s,a)[R(s,a,s')+ \\gamma \\cdot \\max_{a'} Q(s',a')]$$\n",
+    "where we introduce new notation $V^{\\pi^*}(s)$ and $Q^{\\pi^*}(s,a)$ to denote the state values and action values **calculated under the assumption of following the optimal policy $\\pi^*$**. \n",
+    "\n",
+    "In similar fashion to accounting for our stochastic state transitions, we also now **need to weigh the probability of each action in each state**. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of following the **optimal policy update rule**: \n",
+    "$$Q^{\\pi^*}(s,a)=\\sum_{s'}P(s'|s,a)[R(s,a,s')+ \\gamma \\cdot \\max_{a'} Q(s',a')]$$\n",
+    "\n",
+    "Under stochastic policy $\\pi$, we'd want to set the value of the action $Q(s,a)$ equal to:\n",
+    "$$Q^\\pi(s,a)=\\sum_{s'}P(s'|s,a)[R(s,a,s')+ \\gamma \\cdot \\text{???}]$$\n",
+    "\n",
+    "Instead of considering only $\\max_{a'}Q(s',a')$ (as we did when following the *optimal* policy), we must now factor in **the probability of each action being selected**, i.e., we must consider $\\pi(a|s)$, and weigh the value of $Q^\\pi(s',a')$ accordingly. \n",
+    "\n",
+    "To do this, we simply **multiply the action value of each action by the probability of it happening and sum them together**:\n",
+    "$$Q^\\pi(s,a)=\\sum_{s'} P(s'|s,a)[R(s,a,s') + \\gamma \\cdot \\sum_{a'} \\pi(a'|s') \\cdot Q^\\pi(s',a')]$$ \n"
    ]
   }
  ],
