--- a/2. Markov Decision Processes and Dynamic Programming/2.2 Introducing Randomness.ipynb
+++ b/2. Markov Decision Processes and Dynamic Programming/2.2 Introducing Randomness.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 267,
    "metadata": {},
    "outputs": [
     {
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 268,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        " (3, 5): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 0.0}}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 268,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 269,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 270,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 271,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 272,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 273,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 274,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,7 @@
        "{'up': -5, 'down': -5, 'left': 5.3136, 'right': -5}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 275,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 276,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 277,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 278,
    "metadata": {},
    "outputs": [
     {
@@ -457,7 +457,7 @@
        "{'up': 7.29, 'down': 7.29, 'left': 7.29, 'right': -5}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 279,
    "metadata": {},
    "outputs": [
     {
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 280,
    "metadata": {},
    "outputs": [
     {
@@ -538,7 +538,7 @@
        " (3, 5): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 0.0}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 280,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 281,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -687,7 +687,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 282,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 283,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +737,7 @@
        " (3, 5): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 0.0}}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 284,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 285,
    "metadata": {},
    "outputs": [
     {
@@ -831,7 +831,7 @@
        " (3, 5): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 285,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -889,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 286,
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
        "{'up': -0.84, 'down': -0.38, 'left': -4.05, 'right': 0.58}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 286,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 287,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 288,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        " (3, 5): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25}}"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 288,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,16 +1067,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 289,
    "metadata": {},
    "outputs": [],
    "source": [
     "np.random.seed(0)\n",
     "\n",
     "policy = { (i, j): {a: 0.25 for a in actions} for i in range(rows) for j in range(cols)}\n",
-    "state_values = { (i, j): 0.0 for i in range(rows) for j in range(cols )}\n",
+    "state_values = { (i, j): 0.0 for i in range(rows) for j in range(cols )}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 290,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (0, 1): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (0, 2): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (0, 3): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (0, 4): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (0, 5): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (1, 0): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (1, 1): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (1, 2): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (1, 3): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (1, 4): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (1, 5): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (2, 0): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (2, 1): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (2, 2): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (2, 3): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (2, 4): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (2, 5): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (3, 0): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (3, 1): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (3, 2): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (3, 3): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (3, 4): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25},\n",
+       " (3, 5): {'up': 0.25, 'down': 0.25, 'left': 0.25, 'right': 0.25}}"
+      ]
+     },
+     "execution_count": 290,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 291,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): 0.0,\n",
+       " (0, 1): 0.0,\n",
+       " (0, 2): 0.0,\n",
+       " (0, 3): 0.0,\n",
+       " (0, 4): 0.0,\n",
+       " (0, 5): 0.0,\n",
+       " (1, 0): 0.0,\n",
+       " (1, 1): 0.0,\n",
+       " (1, 2): 0.0,\n",
+       " (1, 3): 0.0,\n",
+       " (1, 4): 0.0,\n",
+       " (1, 5): 0.0,\n",
+       " (2, 0): 0.0,\n",
+       " (2, 1): 0.0,\n",
+       " (2, 2): 0.0,\n",
+       " (2, 3): 0.0,\n",
+       " (2, 4): 0.0,\n",
+       " (2, 5): 0.0,\n",
+       " (3, 0): 0.0,\n",
+       " (3, 1): 0.0,\n",
+       " (3, 2): 0.0,\n",
+       " (3, 3): 0.0,\n",
+       " (3, 4): 0.0,\n",
+       " (3, 5): 0.0}"
+      ]
+     },
+     "execution_count": 291,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "probabilities = [0.8, 0.1, 0.1]\n",
     "\n",
-    "transition_probabilities = [0.8, 0.1, 0.1] \n",
+    "actions = ['up', 'down', 'left', 'right']\n",
     "\n",
     "def get_possible_moves(state, action):\n",
     "    i, j = state\n",
@@ -1087,44 +1182,267 @@
     "    elif action == 'left':\n",
     "        return [(i, j-1), (i-1, j), (i+1, j)] # left, up, down\n",
     "    elif action == 'right':\n",
-    "        return [(i, j+1), (i-1, j), (i+1, j)] # right, up, down \n",
-    "    \n",
-    "def get_next_state(state, action):\n",
-    "    possible_moves = get_possible_moves(state, action)\n",
+    "        return [(i, j+1), (i-1, j), (i+1, j)] # right, up, down "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Policy Evaluation\n",
     "\n",
-    "    next_state = possible_moves[np.random.choice(3, p=transition_probabilities)]\n",
+    "$$V^\\pi(s)=\\sum_a\\pi(a|s)\\sum_{s'}P(s'|s,a)[R(s,a,s')+\\gamma \\cdot V^\\pi(s')]$$\n",
     "\n",
-    "    if is_valid(next_state):\n",
-    "        return True, next_state\n",
-    "    else: \n",
-    "        return False, state\n",
+    "We want to do three things:\n",
+    "1. Calculate the value of taking an action in a given state, summing over each outcome weighted by the probability of it happening.\n",
+    "2. Multiply this value by the probability of it being selected under the current policy.\n",
+    "3. Sum over all possible actions in a given state.\n",
     "\n",
-    "def get_best_action(state):\n",
-    "    return max(Q_values[state], key=Q_values[state].get)\n",
-    "\n",
-    "def update():\n",
-    "    gamma = 0.9\n",
-    "    for state in Q_values.keys():\n",
-    "\n",
+    "Policy evaluation will update the **state values** only."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def policy_evaluation():\n",
+    "    # We want to update every possible state\n",
+    "    for state in state_values:\n",
+    "        # Ignore terminal states and obstacles (they don't have a value)\n",
     "        if state == terminal_state or grid[state] == '#':\n",
     "            continue\n",
     "\n",
+    "        v = 0\n",
+    "        # Σ π(a|s): Sum over all actions weighted by their probability\n",
     "        for action in actions:\n",
+    "            # π(a|s): The probability of taking this action under the current policy\n",
+    "            action_probability = policy[state][action]\n",
+    "            \n",
+    "            # Get the set of possible moves by taking this action\n",
+    "            # Remember we can go intended direction or perpendicular\n",
     "            possible_moves = get_possible_moves(state, action)\n",
     "\n",
+    "            # Set a placeholder for the value of the action\n",
+    "            expected_value = 0\n",
+    "\n",
+    "            # Σ P(s'|s,a): Sum over each state and weigh by its probability\n",
+    "            for move, prob in zip(possible_moves, probabilities):\n",
+    "                if is_valid(move):\n",
+    "                    reward = rewards.get(move, 0)\n",
+    "\n",
+    "                    # P(s'|s,a) * [R + γ * V(s)]\n",
+    "                    expected_value += prob * (reward + gamma * state_values[move])\n",
+    "                \n",
+    "                else: expected_value += prob * (-5)\n",
+    "            \n",
+    "            # π(a|s) * Σ P(s'|s,a) * [R + γ * V(s)]\n",
+    "            # Update the value of the state\n",
+    "            v += action_probability * expected_value\n",
+    "        \n",
+    "        # Update V(s)\n",
+    "        state_values[state] = v"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Policy Improvement\n",
+    "\n",
+    "$$\\pi'(s)=\\arg\\max_a\\sum_{s'}P(s'|s,a)[R(s,a,s')+\\gamma\\cdot V^\\pi(s')]$$\n",
+    "\n",
+    "We want to modify the policy to select the action that leads to the highest next-state value. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def policy_improvement():\n",
+    "    for state in state_values:\n",
+    "\n",
+    "        # Initialise a dictionary to store the value of each action\n",
+    "        action_values = {}\n",
+    "\n",
+    "        for action in actions:\n",
+    "            possible_moves = get_possible_moves(state, action)\n",
     "            expected_value = 0\n",
     "\n",
     "            for move, prob in zip(possible_moves, probabilities):\n",
     "                if is_valid(move):\n",
     "                    reward = rewards.get(move, 0)\n",
-    "                    next_value = max(Q_values[move].values())\n",
+    "                    expected_value += prob * (reward * gamma * state_values[move])\n",
+    "                else:\n",
+    "                    expected_value += prob * (-5)\n",
+    "            \n",
+    "            action_values[action] = expected_value\n",
+    "        \n",
+    "        # arg max_a: Select the best action from the state's action set\n",
+    "        best_action = max(action_values, key=action_values.get)\n",
     "\n",
-    "                else: reward = -5; next_value = 0\n",
-    "\n",
-    "                expected_value += prob * (reward + gamma * next_value)\n",
-    "\n",
-    "            Q_values[state][action] = expected_value\n",
-    "\n"
+    "        for action in actions:\n",
+    "            policy[state][action] = 1.0 if action == best_action else 0.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def policy_iteration(iterations: int):\n",
+    "    for i in range(iterations):\n",
+    "        policy_evaluation()\n",
+    "        policy_improvement()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 296,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policy_evaluation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 298,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): -3.75,\n",
+       " (0, 1): 0.0,\n",
+       " (0, 2): -2.5,\n",
+       " (0, 3): -1.8124999999999998,\n",
+       " (0, 4): -1.6578125,\n",
+       " (0, 5): -2.8730078125,\n",
+       " (1, 0): -3.3437500000000004,\n",
+       " (1, 1): 0.0,\n",
+       " (1, 2): -1.8124999999999998,\n",
+       " (1, 3): -0.8156249999999999,\n",
+       " (1, 4): -1.8065234374999997,\n",
+       " (1, 5): -2.3028945312499998,\n",
+       " (2, 0): -2.00234375,\n",
+       " (2, 1): -1.7005273437500001,\n",
+       " (2, 2): -0.79043115234375,\n",
+       " (2, 3): -2.8613626342773437,\n",
+       " (2, 4): 0.0,\n",
+       " (2, 5): -0.5181512695312502,\n",
+       " (3, 0): -2.95052734375,\n",
+       " (3, 1): -2.2964873046875005,\n",
+       " (3, 2): -3.1945566528320315,\n",
+       " (3, 3): 0.0,\n",
+       " (3, 4): -1.25,\n",
+       " (3, 5): 0.0}"
+      ]
+     },
+     "execution_count": 298,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "state_values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 299,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "policy_improvement()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 300,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{(0, 0): {'up': 0.0, 'down': 1.0, 'left': 0.0, 'right': 0.0},\n",
+       " (0, 1): {'up': 0.0, 'down': 0.0, 'left': 1.0, 'right': 0.0},\n",
+       " (0, 2): {'up': 0.0, 'down': 1.0, 'left': 0.0, 'right': 0.0},\n",
+       " (0, 3): {'up': 0.0, 'down': 1.0, 'left': 0.0, 'right': 0.0},\n",
+       " (0, 4): {'up': 0.0, 'down': 1.0, 'left': 0.0, 'right': 0.0},\n",
+       " (0, 5): {'up': 0.0, 'down': 1.0, 'left': 0.0, 'right': 0.0},\n",
+       " (1, 0): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (1, 1): {'up': 0.0, 'down': 1.0, 'left': 0.0, 'right': 0.0},\n",
+       " (1, 2): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 1.0},\n",
+       " (1, 3): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (1, 4): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (1, 5): {'up': 0.0, 'down': 0.0, 'left': 1.0, 'right': 0.0},\n",
+       " (2, 0): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 1.0},\n",
+       " (2, 1): {'up': 0.0, 'down': 1.0, 'left': 0.0, 'right': 0.0},\n",
+       " (2, 2): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (2, 3): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (2, 4): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (2, 5): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (3, 0): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (3, 1): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (3, 2): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (3, 3): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0},\n",
+       " (3, 4): {'up': 0.0, 'down': 0.0, 'left': 0.0, 'right': 1.0},\n",
+       " (3, 5): {'up': 1.0, 'down': 0.0, 'left': 0.0, 'right': 0.0}}"
+      ]
+     },
+     "execution_count": 300,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "policy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 301,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S # - - ↓ ↓\n",
+      "↓ # → → → ↓\n",
+      "→ → ↑ - # ↓\n",
+      "- - - # - F\n"
+     ]
+    }
+   ],
+   "source": [
+    "visualise_path()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 302,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "S # - - - -\n",
+      "↓ # → → → ↓\n",
+      "→ → ↑ - # ↓\n",
+      "- ↑ - # - F\n"
+     ]
+    }
+   ],
+   "source": [
+    "policy_iteration(10)\n",
+    "visualise_path()"
    ]
   },
   {
@@ -1144,7 +1462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
